@@ -72,6 +72,7 @@ Engine fixes:
 * The text for dialog options now respects the 'font_dialog' property in menus/talker.txt.
 * Fixed books not closing properly when trying to load another book with an invalid filename.
 * Fixed combat text being shown for zero damage reflect.
+* Added validation to player XP table parsing to ensure that XP thresholds are not less than those for previous levels.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
